tests/compile/compile_fail/det_vs_nondet_f32_into_det.rs
// This file is expected to fail compilation.
use echo_math::scalar::kinds::DeterministicScalar;

fn deterministic_step<T: DeterministicScalar>(dt: T) {}

fn main() {
    let dt: f32 = 0.016;
    deterministic_step(dt);
}
