tests/compile/compile_fail/det_vs_nondet_f32_into_det.stderr
error[E0277]: the trait bound `f32: DeterministicScalar` is not satisfied
 --> tests/compile/compile_fail/det_vs_nondet_f32_into_det.rs:8:24
  |
8 |     deterministic_step(dt);
  |     ------------------ ^^ the trait `DeterministicScalar` is not implemented for `f32`
  |     |
  |     required by a bound introduced by this call
  |
  = help: the following other types implement trait `DeterministicScalar`:
            DFix64
            F32Det
note: required by a bound in `deterministic_step`
 --> tests/compile/compile_fail/det_vs_nondet_f32_into_det.rs:4:26
  |
4 | fn deterministic_step<T: DeterministicScalar>(dt: T) {}
  |                          ^^^^^^^^^^^^^^^^^^^ required by this bound in `deterministic_step`

warning: unused variable: `dt`
 --> tests/compile/compile_fail/det_vs_nondet_f32_into_det.rs:4:47
  |
4 | fn deterministic_step<T: DeterministicScalar>(dt: T) {}
  |                                               ^^ help: if this is intentional, prefix it with an underscore: `_dt`
  |
  = note: `#[warn(unused_variables)]` on by default
